# chatty

./: .buildconfig  .clangTest.yml  .gitignore  .gitlab-ci.yml  .travis.yml  .zanata.xml  0001-Remove-java-dep-and-fix-build-issue.patch  HACKING.md  README.md  chatty.doap  clang-format.txt  coding-conventions.md  index.html  meson.build  output_acab83272c53c9394496c22df9b08c8c0ae06ccf  run.in  sm.puri.Chatty.json
2021-06-26-212250-31308-1@72ce2cb164d1_master/: index.html  report-06704f.html  report-0b86dd.html  report-0be008.html  report-10a44a.html  report-150a1a.html  report-1bfc73.html  report-2063e3.html  report-27f941.html  report-2f010e.html  report-2fcc5f.html  report-3ae836.html  report-3c0a4e.html  report-477664.html  report-491aba.html  report-493c87.html  report-4cf67f.html  report-501bfb.html  report-5b163d.html  report-5b18bf.html  report-5ce6ee.html  report-5f3bca.html  report-61d0d8.html  report-6a20a0.html  report-6b3c1f.html  report-6c3ae4.html  report-6fb366.html  report-726153.html  report-743bad.html  report-79ab0d.html  report-7ccdd2.html  report-80cd1c.html  report-826fda.html  report-83b546.html  report-84647d.html  report-88bc37.html  report-8e693a.html  report-92deaf.html  report-9d4118.html  report-af265d.html  (+17 more)
2021-06-26-212417-3845-cppcheck@72ce2cb164d1_master/: 17.html  18.html
2021-06-26-213013-31306-1@fa855f458c2d_master/: index.html  report-053909.html  report-078db8.html  report-0abcae.html  report-0d9491.html  report-10c03c.html  report-18d020.html  report-18ee3a.html  report-204486.html  report-23f7ce.html  report-25c399.html  report-2a5df4.html  report-2bb19e.html  report-2dcb1d.html  report-313bf2.html  report-3692e5.html  report-3a59f1.html  report-3bfdac.html  report-3cb72c.html  report-47b3ed.html  report-49ce23.html  report-4b7e87.html  report-4ba968.html  report-562811.html  report-59f522.html  report-5e0159.html  report-63d24d.html  report-65469a.html  report-676401.html  report-679c8a.html  report-6d1638.html  report-7221d0.html  report-7e2a87.html  report-7e7ff4.html  report-868eea.html  report-8def84.html  report-93c1be.html  report-9542d1.html  report-967f46.html  report-a2bd0e.html  (+17 more)
2021-06-26-213142-7619-cppcheck@fa855f458c2d_master/: 1.html  5.html  commitmsg
2021-06-26-224509-31306-1@acab83272c53_master/: index.html  report-0366a7.html  report-0e304c.html  report-0edacf.html  report-0f3087.html  report-0f751a.html  report-0fddce.html  report-10e8e7.html  report-140cd9.html  report-19b2c5.html  report-1d549c.html  report-1eae0b.html  report-2090df.html  report-25f4f1.html  report-29e624.html  (+42 more)
src/: chatty-account.c  chatty-account.h  chatty-application.c  chatty-application.h  chatty-avatar.c  chatty-avatar.h  chatty-buddy-list.c  chatty-buddy-list.h  chatty-chat-view.c  chatty-chat-view.h  chatty-chat.c  chatty-chat.h  chatty-connection.c  chatty-connection.h  chatty-contact-provider.c  chatty-contact-provider.h  chatty-contact-row.c  chatty-contact-row.h  chatty-conversation.c  chatty-conversation.h  chatty-dbus.c  chatty-dbus.h  chatty-dialogs.c  chatty-dialogs.h  chatty-enums.h  chatty-folks.c  chatty-folks.h  chatty-fp-row.c  chatty-fp-row.h  chatty-history.c  chatty-history.h  chatty-icons.c  chatty-icons.h  chatty-image-item.c  chatty-image-item.h  chatty-list-row.c  chatty-list-row.h  chatty-log.c  chatty-log.h  chatty-lurch.c  (+53 more)
src/css/: style.css
src/dialogs/: chatty-dialogs.c  chatty-dialogs.h  chatty-info-dialog.c  chatty-info-dialog.h  chatty-muc-info-dialog.c  chatty-muc-info-dialog.h  chatty-new-chat-dialog.c  chatty-new-chat-dialog.h  chatty-new-muc-dialog.c  chatty-new-muc-dialog.h  chatty-settings-dialog.c  chatty-settings-dialog.h  chatty-user-info-dialog.c  chatty-user-info-dialog.h
src/matrix/: chatty-ma-account.c  chatty-ma-account.h  chatty-ma-buddy.c  chatty-ma-buddy.h  chatty-ma-chat.c  chatty-ma-chat.h  matrix-api.c  matrix-api.h  matrix-db.c  matrix-db.h  matrix-enc.c  matrix-enc.h  matrix-enums.h  matrix-utils.c  matrix-utils.h
src/ui/: chatty-add-account-dialog.ui  chatty-avatar-select-popover.ui  chatty-blist-view-popover.ui  chatty-chat-view.ui  chatty-contact-row.ui  chatty-dialog-info.ui  chatty-dialog-join-muc.ui  chatty-dialog-muc-info.ui  chatty-dialog-new-chat.ui  chatty-dialog-settings.ui  chatty-dialog-user-info.ui  chatty-dialog-welcome.ui  chatty-edit-account-dialog.ui  chatty-fp-row.ui  chatty-image-item.ui  chatty-info-dialog.ui  chatty-join-muc-dialog.ui  chatty-list-row.ui  chatty-message-list-popover.ui  chatty-message-list.ui  chatty-message-row.ui  chatty-message-view-popover.ui  chatty-new-chat-view-popover.ui  chatty-pane-msg-view.ui  chatty-settings-dialog.ui  chatty-window.ui
src/users/: chatty-account.c  chatty-account.h  chatty-contact-private.h  chatty-contact.c  chatty-contact.h  chatty-item.c  chatty-item.h  chatty-pp-account.c  chatty-pp-account.h  chatty-pp-buddy.c  chatty-pp-buddy.h  chatty-user.c  chatty-user.h
src/xeps/: chatty-xep-0184.c  chatty-xep-0184.h  chatty-xep-0313.c  chatty-xep-0313.h  chatty-xep-0352.c  chatty-xep-0352.h  xeps.c  xeps.h
src/xeps/prpl/jabber/: caps.h  jabber.h
tests/: account.c  history.c  matrix-api.c  matrix-db.c  matrix-enc.c  matrix-utils.c  meson.build  purple-init.h  settings.c  utils.c
tests/history-db/: empty-v0.sql  empty-v1.sql  empty-v2.sql  empty-v3.sql  matrix-v0.sql  matrix-v1.sql  matrix-v2.sql  matrix-v3.sql  sms-DE-v0.sql  sms-DE-v1.sql  sms-DE-v2.sql  sms-DE-v3.sql  sms-IN-v0.sql  sms-IN-v1.sql  sms-IN-v2.sql  sms-IN-v3.sql  sms-v0.sql  sms-v1.sql  sms-v2.sql  sms-v3.sql  telegram-chat-v0.sql  telegram-chat-v1.sql  telegram-chat-v2.sql  telegram-chat-v3.sql  telegram-im-v0.sql  telegram-im-v1.sql  telegram-im-v2.sql  telegram-im-v3.sql  xmpp-im-v0.sql  xmpp-im-v1.sql  xmpp-im-v2.sql  xmpp-im-v3.sql  xmpp-muc-v0.sql  xmpp-muc-v1.sql  xmpp-muc-v2.sql  xmpp-muc-v3.sql
tests/matrix-utils/: canonical-1.json.expected  canonical-2.json  canonical-4.json  canonical-4.json.expected  canonical-5.json  canonical-5.json.expected  canonical-6.json  canonical-6.json.expected  canonical-7.json  canonical-7.json.expected
(+477 files in other folders)
